--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=PMP
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_TIMEZONE=Asia/Tashkent
+APP_URL=http://localhost:82
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -36,7 +36,7 @@ SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
+QUEUE_CONNECTION=redis
 
 CACHE_STORE=database
 CACHE_PREFIX=
@@ -44,7 +44,7 @@ CACHE_PREFIX=
 MEMCACHED_HOST=127.0.0.1
 
 REDIS_CLIENT=phpredis
-REDIS_HOST=127.0.0.1
+REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
