docker and login page fixed

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,7 +1,7 @@
 FROM php:8.2.0-fpm
 
 # Install all necessary PHP extensions
-RUN apt-get update && apt-get install -y libbz2-dev libcurl4-openssl-dev libxml2-dev libzip-dev libgd-dev zlib1g-dev libicu-dev libpq-dev
+RUN apt-get update && apt-get install -y libbz2-dev libcurl4-openssl-dev libxml2-dev libzip-dev libgd-dev zlib1g-dev libicu-dev pkg-config libpq-dev libssl-dev build-essential
 RUN docker-php-ext-install curl intl gd zip pdo pdo_pgsql
 
 # Install Redis PHP extension
